--- a/assets/css/datatable.css
+++ b/assets/css/datatable.css
@@ -74,8 +74,10 @@ div.dataTables_wrapper div.dataTables_filter input {
 	border-color: #2a7837;
 }
 
-.page-link {
-	color: #2a7837;
+.page-link.active {
+	color: #fff !important;
+	background-color: #50c342 !important;
+	border-color: #50c342 !important;
 }
 
 .page-link:hover {
