--- a/assets/css/datatable.css
+++ b/assets/css/datatable.css
@@ -74,11 +74,11 @@ div.dataTables_wrapper div.dataTables_filter input {
 	border-color: #2a7837;
 }
 
-.page-link.active {
+/* .page-link.active {
 	color: #fff !important;
 	background-color: #50c342 !important;
 	border-color: #50c342 !important;
-}
+} */
 
 .page-link:hover {
 	color: #184620;
