--- a/assets/css/datatable.css
+++ b/assets/css/datatable.css
@@ -99,6 +99,10 @@ div.dataTables_wrapper div.dataTables_info {
 	padding-top: .85em
 }
 
+div.dataTables_wrapper {
+	max-width: 100%;
+}
+
 div.dataTables_wrapper div.dataTables_paginate {
 	margin: 0;
 	white-space: nowrap;
