--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@ body {
 }
 
 a {
-  color: #E63946;
+  color: #013BA6;
   text-decoration: none;
 }
 
@@ -46,8 +46,8 @@ h1, h2, h3, h4, h5, h6 {
   position: fixed;
   top: calc(50% - 30px);
   left: calc(50% - 30px);
-  border: 6px solid #E63946;
-  border-top-color: #fcc7c7;
+  border: 6px solid #013BA6;
+  border-top-color: #356ACC;
   border-radius: 50%;
   width: 60px;
   height: 60px;
@@ -83,7 +83,7 @@ h1, h2, h3, h4, h5, h6 {
   right: 15px;
   bottom: 15px;
   z-index: 996;
-  background: #E63946;
+  background: #013BA6;
   width: 40px;
   height: 40px;
   border-radius: 50px;
@@ -97,7 +97,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .back-to-top:hover {
-  background: #ff6b6b;
+  background: #356ACC;
   color: #fff;
 }
 
@@ -131,7 +131,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #header.header-scrolled {
-  background: #EA002A;
+  background: #356ACC;
   height: 60px;
 }
 
@@ -250,7 +250,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .navbar .dropdown ul a:hover, .navbar .dropdown ul .active:hover, .navbar .dropdown ul li:hover > a {
-  color: #E63946;
+  color: #013BA6;
 }
 
 .navbar .dropdown:hover > ul {
@@ -309,7 +309,7 @@ h1, h2, h3, h4, h5, h6 {
   right: 0;
   left: 0;
   bottom: 0;
-  background: #E63946;
+  background: #013BA6;
   transition: 0.3s;
   z-index: 999;
 }
@@ -341,11 +341,11 @@ h1, h2, h3, h4, h5, h6 {
 .navbar-mobile a {
   padding: 10px 20px;
   font-size: 15px;
-  color: #E63946
+  color: #013BA6
 }
 
 .navbar-mobile a:hover, .navbar-mobile .active, .navbar-mobile li:hover > a {
-  color: #E63946;
+  color: #013BA6;
 }
 
 .navbar-mobile .getstarted {
@@ -377,7 +377,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .navbar-mobile .dropdown ul a:hover, .navbar-mobile .dropdown ul .active:hover, .navbar-mobile .dropdown ul li:hover > a {
-  color: #E63946;
+  color: #013BA6;
 }
 
 .navbar-mobile .dropdown > .dropdown-active {
@@ -396,7 +396,7 @@ h1, h2, h3, h4, h5, h6 {
 
 #hero:before {
   content: "";
-  background: #E63946;
+  background: #013BA6;
   position: absolute;
   bottom: 0;
   top: 0;
@@ -433,7 +433,7 @@ h1, h2, h3, h4, h5, h6 {
   border-radius: 50px;
   transition: 0.5s;
   color: #fff;
-  background: #E63946;
+  background: #013BA6;
 }
 
 #hero .btn-get-started:hover {
@@ -617,7 +617,7 @@ section {
   width: 120px;
   height: 1px;
   display: inline-block;
-  background: #E63946;
+  background: #013BA6;
   margin: 4px 10px;
 }
 
@@ -628,7 +628,7 @@ section {
   font-weight: 700;
   text-transform: uppercase;
   font-family: "Poppins", sans-serif;
-  color: #E63946;
+  color: #013BA6;
 }
 
 /*--------------------------------------------------------------
@@ -716,19 +716,19 @@ section {
   justify-content: center;
   width: 64px;
   height: 64px;
-  border: 2px solid #E63946;
+  border: 2px solid #013BA6;
   border-radius: 50px;
   transition: 0.5s;
 }
 
 .about .icon-box .icon i {
-  color: #E63946;
+  color: #013BA6;
   font-size: 32px;
 }
 
 .about .icon-box:hover .icon {
-  background: #E63946;
-  border-color: #E63946;
+  background: #013BA6;
+  border-color: #013BA6;
 }
 
 .about .icon-box:hover .icon i {
@@ -748,7 +748,7 @@ section {
 }
 
 .about .icon-box .title a:hover {
-  color: #E63946;
+  color: #013BA6;
 }
 
 .about .icon-box .description {
@@ -865,7 +865,7 @@ section {
   display: flex;
   align-items: center;
   padding: 20px;
-  background: #FAE9EA;
+  background: #356ACC;
   transition: ease-in-out 0.3s;
 }
 
@@ -884,16 +884,16 @@ section {
 }
 
 .features .icon-box h3 a {
-  color: #141414e8;
+  color: #fff;
   transition: ease-in-out 0.3s;
 }
 
 .features .icon-box h3 a:hover {
-  color: #6e6e6ee8;
+  color: #fff;
 }
 
 .features .icon-box:hover {
-  background: #FFD4D8;
+  background: #87b0f8;
 }
 
 /*--------------------------------------------------------------
@@ -918,7 +918,7 @@ section {
   left: 50%;
   transform: translateX(-50%);
   font-size: 20px;
-  background: #E63946;
+  background: #013BA6;
   padding: 12px;
   color: #fff;
   border-radius: 50px;
@@ -954,7 +954,7 @@ section {
 .details .content h3 {
   font-weight: 600;
   font-size: 26px;
-  color: #E63946;
+  color: #013BA6;
 }
 
 .details .content ul {
@@ -969,7 +969,7 @@ section {
 .details .content ul i {
   font-size: 20px;
   padding-right: 4px;
-  color: #E63946;
+  color: #013BA6;
 }
 
 .details .content p:last-child {
@@ -1080,7 +1080,7 @@ section {
 }
 
 .testimonials .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #E63946;
+  background-color: #013BA6;
 }
 
 @media (min-width: 1024px) {
@@ -1169,7 +1169,7 @@ section {
 }
 
 .team .member .social a:hover {
-  color: #E63946;
+  color: #013BA6;
 }
 
 .team .member .social i {
@@ -1202,7 +1202,7 @@ section {
 
 .pricing h4 {
   font-size: 36px;
-  color: #E63946;
+  color: #013BA6;
   font-weight: 600;
   font-family: "Poppins", sans-serif;
   margin-bottom: 20px;
@@ -1234,7 +1234,7 @@ section {
 }
 
 .pricing ul i {
-  color: #E63946;
+  color: #013BA6;
   font-size: 18px;
   padding-right: 4px;
 }
@@ -1252,7 +1252,7 @@ section {
 }
 
 .pricing .btn-buy {
-  background: #E63946;
+  background: #013BA6;
   display: inline-block;
   padding: 8px 35px 10px 35px;
   border-radius: 50px;
@@ -1271,7 +1271,7 @@ section {
 
 .pricing .featured h3 {
   color: #fff;
-  background: #E63946;
+  background: #013BA6;
 }
 
 .pricing .advanced {
@@ -1283,7 +1283,7 @@ section {
   z-index: 1;
   font-size: 14px;
   padding: 1px 0 3px 0;
-  background: #E63946;
+  background: #013BA6;
   color: #fff;
 }
 
@@ -1327,7 +1327,7 @@ section {
   position: absolute;
   right: 0;
   left: 20px;
-  color: #E63946;
+  color: #013BA6;
 }
 
 .faq .faq-list .icon-show, .faq .faq-list .icon-close {
@@ -1351,7 +1351,7 @@ section {
 }
 
 .faq .faq-list a.collapsed:hover {
-  color: #E63946 !important;
+  color: #013BA6 !important;
 }
 
 .faq .faq-list a.collapsed .icon-show {
@@ -1410,7 +1410,7 @@ section {
 }
 
 .contact .info .email:hover i, .contact .info .address:hover i, .contact .info .phone:hover i {
-  background: #E63946;
+  background: #013BA6;
   color: #fff;
 }
 
@@ -1480,7 +1480,7 @@ section {
 }
 
 .contact .php-email-form button[type="submit"] {
-  background: #E63946;
+  background: #013BA6;
   border: 0;
   padding: 10px 30px;
   color: #fff;
@@ -1514,7 +1514,7 @@ section {
 # Footer
 --------------------------------------------------------------*/
 #footer {
-  background: #E63946;
+  background: #013BA6;
   padding: 0 0 30px 0;
   color: #fff;
   font-size: 14px;
@@ -1526,7 +1526,7 @@ section {
 
 #footer .footer-top .footer-info {
   margin-bottom: 15px;
-  background: #ff6b6b;
+  background: #356ACC;
   color: #fff;
   border-top: 4px solid #fff;
   text-align: center;
@@ -1563,7 +1563,7 @@ section {
 }
 
 #footer .footer-top .social-links a:hover {
-  background: #E63946;
+  background: #013BA6;
   color: #fff;
   text-decoration: none;
 }
@@ -1637,7 +1637,7 @@ section {
   background: none;
   font-size: 16px;
   padding: 0 20px;
-  background: #ff6b6b;
+  background: #356ACC;
   color: #fff;
   transition: 0.3s;
   border-radius: 50px;
